<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:backgroundTint="#EFEFEF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/headerListaView"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:adjustViewBounds="true"
        android:contentDescription='image main'
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,ImageContrastCheck"
        tools:srcCompat="@color/design_default_color_secondary_variant" />

    <ImageView
        android:id="@+id/logoMainView"
        android:layout_width="181dp"
        android:layout_height="155dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerListaView"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tituloListaView"
        android:layout_width="390dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:minHeight="48dp"
        android:shadowColor="@color/material_dynamic_neutral0"
        android:text="@string/correo_yuri"
        android:textAlignment="center"
        android:textColor="#E0E0E0"
        android:textColorHighlight="#FF0000"
        android:textColorHint="#000000"
        android:textSize="34sp"

        app:layout_constraintEnd_toEndOf="@+id/headerListaView"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/headerListaView"
        app:layout_constraintTop_toTopOf="@+id/headerListaView"
        tools:ignore="TextSizeCheck"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/usuarioMainView"
        android:layout_width="374dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerListaView"
        app:layout_constraintVertical_bias="0.531" />

    <EditText
        android:id="@+id/contraseñaMainView"
        android:layout_width="371dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/input_mail"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@+id/usuarioMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerListaView"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/listarMainView"
        android:layout_width="269dp"
        android:layout_height="54dp"
        android:backgroundTint="#2D2F31"
        android:text="@string/btn_listar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioMainView"
        app:layout_constraintVertical_bias="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>