<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:backgroundTint="#EFEFEF"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/headerListaView"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:adjustViewBounds="true"
        android:contentDescription='image main'
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,ImageContrastCheck"
        tools:srcCompat="@color/design_default_color_secondary_variant" />

    <TextView
        android:id="@+id/tituloListaView"
        android:layout_width="406dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-black"
        android:minHeight="48dp"
        android:shadowColor="@color/material_dynamic_neutral0"
        android:text="@string/correo_yuri"
        android:textAlignment="center"
        android:textColor="#E0E0E0"
        android:textColorHighlight="#FF0000"
        android:textColorHint="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/logoMainView"
        app:layout_constraintEnd_toEndOf="@+id/headerListaView"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/headerListaView"
        app:layout_constraintTop_toTopOf="@+id/headerListaView"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="TextSizeCheck"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/logoMainView"
        android:layout_width="393dp"
        android:layout_height="312dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerListaView"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/ingresar.btn1.principal"
        android:layout_width="238dp"
        android:layout_height="71dp"
        android:backgroundTint="#2D2F31"
        android:drawableBottom="#94C9C0"
        android:fontFamily="sans-serif-black"

        android:text="@string/btn_login"
        android:textColor="#E0E0E0"


        android:textColorHighlight="#009688"
        android:textColorLink="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMainView"
        app:layout_constraintVertical_bias="0.598"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>